# AnaAgent

./: .dockerignore  .env.example  .env.template  .gitignore  Dockerfile  Dockerfile.api  Dockerfile.ui  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_app.py
app/: __init__.py  main.py
app/agents/: analysis_agent.py
app/api/routes/: analysis.py
app/core/: config.py
app/models/: analysis.py
app/services/: analysis_service.py
tests/: test_app.py
